rtsp-media: Don't seek for PLAY if the position will not change

https://bugzilla.gnome.org/show_bug.cgi?id=745704